infogade en hämtning av username från MainActivity till SecondaryActivity, infogade en temporär textview för att presentera detta

--- a/app/src/main/res/layout/activity_secondary.xml
+++ b/app/src/main/res/layout/activity_secondary.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".SecondaryActivity">
 
+    <TextView
+        android:id="@+id/usernameview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+/>
 </androidx.constraintlayout.widget.ConstraintLayout>
